--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "final-backend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -7,9 +7,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
