--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "cd backend && npm install",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
