--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "runtime",
+  "name": "final-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
+    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "react-router-dom": "^7.8.2"
+    "dotenv": "^17.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
